# ALLIGATR

./: .README.md.swp  README.md  cameraTest.py
HUB/: CMakeLists.txt  PreflightChecklist.md  README.md  capturedVideo.avi  capturedVideo1.avi  convert_images.sh  create_ws.sh  engage.sh  gazebo_engage.sh  main.cpp  mav.parm  mav.tlog  mav.tlog.raw  mav_0_1.parm  mavinit.txt  mavros_engage.sh  primaryTime1710951484.78.csv  primaryTime1710951491.07.csv  primaryTime1710951497.5.csv  primaryTime1710951585.66.csv  primaryTime_1710952141.02.csv  primaryVideo_1710915764.67.avi  primaryVideo_1710915996.83.avi  primaryVideo_1710950236.63.avi  primaryVideo_1710950397.84.avi  primaryVideo_1710950689.31.avi  primaryVideo_1710950751.9.avi  primaryVideo_1710951329.15.avi  primaryVideo_1710951477.73.avi  primaryVideo_1710951585.64.avi  primaryVideo_1710952140.99.avi  remote_engage.sh  rgvA_positions.csv  rgvB_positions.csv  secondaryTime_1710952140.49.csv  secondaryVideo_1710915764.11.avi  secondaryVideo_1710915996.35.avi  secondaryVideo_1710950100.61.avi  secondaryVideo_1710950236.1.avi  secondaryVideo_1710950306.42.avi  (+14 more)
HUB/data/data_2024_04_02_22_54_42/: drone_state_hist.csv
HUB/data/data_2024_04_02_23_04_47/: drone_state_hist.csv
HUB/data/data_2024_04_02_23_11_06/: drone_state_hist.csv  rgvA_detections.csv  rgvB_detections.csv
HUB/data/data_2024_04_02_23_27_34/: drone_state_hist.csv  rgvB_detections.csv
HUB/data/data_2024_04_02_23_45_18/: drone_state_hist.csv  rgvA_detections.csv  rgvB_detections.csv
HUB/data/data_2024_04_02_23_52_19/: drone_state_hist.csv  rgvA_detections.csv  rgvB_detections.csv
HUB/data/data_2024_04_03_00_53_41/: drone_state_hist.csv
HUB/data/data_2024_04_03_01_04_56/: drone_state_hist.csv  rgvA_detections.csv  rgvB_detections.csv
HUB/data/data_2024_04_03_12_14_38/: drone_state_hist.csv  rgvB_detections.csv
HUB/data/data_2024_04_03_12_29_12/: rgvA_detections.csv  rgvB_detections.csv
HUB/data/data_2024_04_03_12_52_16/: rgvA_detections.csv  rgvB_detections.csv
HUB/data/data_2024_04_03_18_22_06/: drone_state_hist.csv  (+2 more)
HUB/models/: Jackal UGV 3D Model.IGS  Jackal UGV 3D Model.IGS:Zone.Identifier  box.sdf
HUB/src/: CameraObject.cpp  HUB.cpp  WIFI.cpp  build_catkin_ws.sh  main.cpp  pathStep.cpp  phaseStep.cpp  uas.cpp
(+477 files in other folders)
