<?xml version="1.0"?>
<package format="2">
  <name>gatr_gazebo_pkg</name>
  <version>0.0.0</version>
  <description>The gatr_gazebo_pkg package</description>

  <maintainer email="ckohl10@todo.todo">ckohl10</maintainer>

  <license>TODO</license>

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
