<?xml version="1.0"?>
<package format="2">
  <name>gatr_missionplanner</name>
  <version>0.0.0</version>
  <description>The gatr_missionplanner package</description>

  <maintainer email="zvandivere@gmail.com">Zane</maintainer>


  <license>TODO</license>


 
  <!-- <author email="zvandivere@gmail.com">Zane</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
